F: move servlet launching code into separate command class (!)